<resources>
    <string name="app_name">PetSphere</string>
    <string name="welcome">Benvenut*!</string>
    <string name="already_registered">Sei già un utente?</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Conferma Password</string>
    <string name="password_forgotten">Hai dimenticato la password?</string>
    <string name="new_user">Nuovo utente</string>
    <string name="new_user_question">Nuovo utente?</string>
    <string name="sign_up">Registrati</string>
    <string name="login">Accedi</string>
    <string name="login_with_google">Accedi con Google</string>
    <string name="login_with_fb">Accedi con Facebook</string>
    <string name="or">oppure</string>
    <string name="user_first_name">Nome</string>
    <string name="user_last_name">Cognome</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="lista_animali">Lista Animali</string>
    <string name="clicker">Clicker</string>
    <string name="clickertitle">Clicker:</string>
    <string name="click">Click!</string>
    <string name="profilo_utente">Profilo</string>
    <string name="benvenut">Benvenut*!</string>
    <string name="i_tuoi_animali">I tuoi animali:</string>
    <string name="inserisci_un_nuovo_animale">Inserisci un nuovo animale</string>
    <string name="foto_pet">foto pet</string>
    <string name="nome_pet">Nome pet:</string>
    <string name="modifica_profilo">Modifica Profilo</string>
    <string name="inserisci_note">Inserisci note</string>
    <string name="note">Note:</string>
    <string name="inserisci_allergie">Inserisci allergie</string>
    <string name="tipo_di_animale">Tipo di animale:</string>
    <string name="colore">Colore:</string>
    <string name="compleanno">Compleanno:</string>
    <string name="et">Età:</string>
    <string name="numero_di_microchip">Numero di microchip:</string>
    <string name="soprannome">Soprannome:</string>
    <string name="nome">Nome</string>
    <string name="tipo_animale">Tipo animale</string>
    <string name="salva">Salva</string>
    <string name="peso">Peso</string>
    <string name="inserisci_eta">Inserisci età</string>
    <string name="inserisci_nome">Inserisci nome</string>
    <string name="inserisci_data_di_nascita">Inserisci data di nascita</string>
    <string name="allergie">Allergie:</string>
    <string name="inserisci_microchip">Inserisci microchip</string>
    <string name="inserisci_soprannome">Inserisci soprannome</string>
    <string name="inserisci_peso">Inserisci peso</string>
    <string name="elimina">Elimina</string>
    <string name="modifica">Modifica</string>
    <string name="random_fact">Fact</string>
    <string name="inserisci_compleanno">Inserisci compleanno</string>
    <string name="peso_in_kg">Peso (Kg):</string>
    <string name="annulla">Annulla</string>
    <string name="conferma_eliminazione">Sei sicur* di voler eliminare questo pet?</string>
    <string name="messaggio_conferma_eliminazione">Questa azione non è reversibile</string>
    <string name="colore_scheda_pet">Colore scheda pet:</string>
    <string name="carica_immagine">Carica immagine</string>
    <string name="modifica_immagine">Modifica immagine</string>
    <string name="_0_0">0.0</string>
    <string name="testo_clicker">Un clicker è uno strumento che riproduce sempre lo stesso suono utilizzabile per migliorare l\'addestramento.\nSe il pet associa il rumore ad un rinforzo positivo, come un biscottino, questo strumento potrà aiutarti a fornire un feedback più preciso al tuo pet.\n\nClicca il bottone rosso quando il tuo pet esegue il comando giusto, gli darai una risposta rapida e chiara per confermare il suo successo.\n\nBuon addestramento!</string>
    <string name="titolo_clicker_info">Cos\'è un clicker?</string>
    <string name="ho_capito">Ho capito</string>
    <string name="creazione_succ">"Pet creato con successo!"</string>
    <string name="modifiche_salvate">"Modifiche salvate"</string>
    <string name="curiosita_cani">"Curiosità sui cani:"</string>
    <string name="curiosita_gatti">"Curiosità sui gatti:"</string>
    <string name="ok">"OK"</string>
    <string name="errore_immagine">"Errore nel caricamento dell'immagine"</string>
    <string name="razza">Razza:</string>
    <string name="inserisci_la_razza">Inserisci la razza</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_email_login">Check the email address</string>
    <string name="error_retrieving_news">There was an error retrieving the news</string>
    <string name="error_no_internet">No internet connection</string>
    <string name="error_collision_user">This email is already registered</string>
    <string name="error_unexpected">Unexpected error</string>
    <string name="signup">Signup</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="error_no_user">no user</string>
    <string name="error_password_too_short">password troppo corta</string>
    <string name="nuova_password">Nuova Password</string>
    <string name="cambia_password">Cambia Password</string>
    <string name="logout">Logout</string>
    <string name="sei_loggato_come">Sei loggat* come:</string>
    <string name="pagina_utente">Pagina Utente:</string>
    <string name="effettua_il_login">Effettua il login:</string>
    <string name="registrati">Registrati:</string>
    <string name="hai_gi_un_account">Hai già un account?</string>
    <string name="error_length">La password deve contenere almeno 8 caratteri</string>
    <string name="error_maiusc">La password deve contenere almeno una lettera maiuscola</string>
    <string name="error_num">La password deve contenere almeno un numero</string>
    <string name="error_pw">Password non valida</string>
    <string name="password_reset_email_sent">Mail di reset password inviata</string>
    <string name="error_sending_password_reset">errore nell\'invio della mail di reset password</string>
    <string name="eliminato_success">Pet eliminato con successo</string>
    <string name="errore_eliminazione_non_riuscita">Errore: eliminazione non riuscita</string>
    <string name="nessun_fatto_disponibile">Nessun fatto disponibile</string>
    <string name="password_cambiata_con_successo">Password cambiata con successo!</string>
    <string name="errore_nel_cambio_password">Errore nel cambio password.</string>
    <string name="errore_durante_il_logout">Errore durante il logout.</string>

</resources>
