<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/petslistfragment">

    <!-- Fragment per Pets List -->
    <fragment
        android:id="@+id/petslistfragment"
        android:name="com.unimib.petsphere.ui.PetsListFragment"
        android:label="@string/lista_animali"
        tools:layout="@layout/fragment_pet_list" />

    <!-- Fragment per Clicker -->
    <fragment
        android:id="@+id/clicker"
        android:name="com.unimib.petsphere.ui.ClickerFragment"
        android:label="@string/clicker"
        tools:layout="@layout/fragment_clicker" />

    <!-- Fragment per User Profile -->
    <fragment
        android:id="@+id/user"
        android:name="com.unimib.petsphere.ui.UserFragment"
        android:label="@string/profilo_utente"
        tools:layout="@layout/fragment_user" />
</navigation>