<?xml version="1.0" encoding="utf-8"?>
<!-- Author: Alessia Mazzeo !-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_medium"
  >


    <TextView
        android:id="@+id/pagina_utente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/pagina_utente"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <View
        android:id="@+id/line"
        android:layout_width="200dp"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_gravity="center"
        android:background="#555"
        android:layout_marginBottom="@dimen/margin_verylarge"/>

    <TextView
        android:id="@+id/logged_as"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_small"
        android:text="@string/sei_loggato_come"
        android:textSize="@dimen/text_title_small"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_verylarge"
        android:paddingStart="@dimen/margin_small"
        android:textSize="@dimen/text_title_small" />

    <EditText
        android:id="@+id/editTextNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nuova_password"
        android:inputType="textPassword"
        android:padding="@dimen/margin_small"/>

    <Button
        android:id="@+id/buttonChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cambia_password"
        android:layout_marginTop="@dimen/margin_small"/>

    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_marginTop="@dimen/margin_medium"
        android:backgroundTint="@android:color/holo_red_dark" />

</LinearLayout>
