<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal|bottom"
    tools:context=".ui.welcome.StartActivity"
    app:layout_constraintBottom_toBottomOf="parent" >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputFirstNameLayout"
        style="?attr/textInputOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/def_margin"
        android:layout_marginTop="@dimen/margin_button"
        android:layout_marginEnd="@dimen/def_margin"
        android:hint="@string/user_first_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputUserFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/text_box_color"
            android:inputType="textPersonName"
            android:textColor="@color/dark_blue_color" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLastNameLayout"
        style="?attr/textInputOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/def_margin"
        android:layout_marginEnd="@dimen/def_margin"
        android:layout_marginTop="@dimen/def_margin"
        android:hint="@string/user_last_name"
        app:layout_constraintTop_toBottomOf="@id/textInputFirstNameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputUserLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/text_box_color"
            android:inputType="textPersonName"
            android:textColor="@color/dark_blue_color" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEmailLayout"
        style="?attr/textInputOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/def_margin"
        android:layout_marginEnd="@dimen/def_margin"
        android:layout_marginTop="@dimen/def_margin"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLastNameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/text_box_color"
            android:inputType="textEmailAddress"
            android:textColor="@color/dark_blue_color" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPasswordLayout"
        style="?attr/textInputOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/def_margin"
        android:layout_marginEnd="@dimen/def_margin"
        android:layout_marginTop="@dimen/def_margin"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputEmailLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/text_box_color"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputConfirmPasswordLayout"
        style="?attr/textInputOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/def_margin"
        android:layout_marginEnd="@dimen/def_margin"
        android:layout_marginTop="@dimen/def_margin"
        android:hint="@string/confirm_password"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputPasswordLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/text_box_color"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/margin_button"
        android:layout_marginEnd="@dimen/margin_button"
        android:layout_marginTop="@dimen/margin_button"
        android:backgroundTint="@color/main_color"
        android:text="@string/sign_up"
        android:textColor="@color/bg_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputConfirmPasswordLayout" />

    <Button
        android:id="@+id/alreadySignedUpButton"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/def_margin"
        android:layout_marginEnd="@dimen/def_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/already_registered"
        android:textColor="@color/main_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton" />

</androidx.constraintlayout.widget.ConstraintLayout>